--- a/index.html
+++ b/index.html
@@ -249,6 +249,12 @@
       <h2 class="data-error__title">Не удалось загрузить данные</h2>
     </section>
   </template>
+  <template id="comment">
+    <li class="social__comment">
+      <img class="social__picture" src="" alt="" width="35" height="35">
+      <p class="social__text"></p>
+    </li>
+  </template>
   <script src="/js/main.js" type="module"></script>
 </body>
 
