--- a/index.html
+++ b/index.html
@@ -256,7 +256,9 @@
       <p class="social__text"></p>
     </li>
   </template>
-  <script src="/js/main.js" type="module"></script>
+
+  <script src="vendor/pristine/pristine.min.js"></script>
+  <script src="js/main.js" type="module"></script>
 </body>
 
 </html>
