--- a/index.html
+++ b/index.html
@@ -251,6 +251,8 @@
       <h2 class="data-error__title">Не удалось загрузить данные</h2>
     </section>
   </template>
+
+  <!-- Коментарий пользователя -->
   <template id="comment">
     <li class="social__comment">
       <img class="social__picture" src="" alt="" width="35" height="35">
